[gd_scene load_steps=5 format=3 uid="uid://ipguruv1rs3e"]

[ext_resource type="Script" path="res://src/prefabs/EditorVoiceAsset.gd" id="1_nll2m"]
[ext_resource type="Texture2D" uid="uid://p10pu0mb2rp7" path="res://assets/ui/editor_voice_64.png" id="2_rg5x4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jptoj"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_memg6"]

[node name="EditorVoiceAsset" type="Control"]
custom_minimum_size = Vector2(240, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 64.0
script = ExtResource("1_nll2m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jptoj")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.5)
position = Vector2(32, 32)
texture = ExtResource("2_rg5x4")

[node name="FileListPrev" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Audio.ogg"
label_settings = SubResource("LabelSettings_memg6")
vertical_alignment = 1
text_overrun_behavior = 3

[node name="ContextMenu" type="PopupMenu" parent="."]
size = Vector2i(133, 62)
hide_on_state_item_selection = true
item_count = 2
item_0/text = "Edit Asset"
item_1/text = "Delete Asset"
item_1/id = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="id_pressed" from="ContextMenu" to="." method="_on_context_menu_id_pressed"]
